Fix for off center toggles (hopefully)

--- a/src/styles/settings/inputs.css
+++ b/src/styles/settings/inputs.css
@@ -137,9 +137,7 @@ aside .switch {
 	display: inline-block;
 	height: 26px;
 	width: 59px;
-	margin: 0;
 	border-radius: 16px;
-	border: 2px solid transparent;
 	background-color: #c6c4c7;
 	-webkit-appearance: none;
 	-moz-appearance: none;
@@ -157,15 +155,15 @@ aside .switch:after {
 	position: absolute;
 	height: 22px;
 	width: 34px;
-	top: 0px;
-	left: 0px;
 	border-radius: 100px;
-	/* box-shadow: 0px 1px 3px 2px rgba(20, 20, 20, 0.12); */
 	background-color: white;
-	transform: translateX(0px);
 	transition:
 		background-color 0.15s,
 		transform 0.15s;
+
+	left: 2px;
+	top: 50%;
+	margin-top: -11px;
 }
 
 aside .switch:checked {
